# app/Models/User.php
@@ -24,7 +24,8 @@ class User extends Authenticatable implements JWTSubject
         'name',
         'email',
         'password',
-        'nickname'
+        'nickname',
+        'timezone'
     ];
 
     /**
